<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|left"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/avisoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_inicio"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/fechaInicioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_inicio" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_fin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/fechaFinBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_fin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical|left" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cargar"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/verRegistrosDiaBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cargar" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
